--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,8 @@
+body {
+    font-family: 'Noto Sans JP', sans-serif;
+    font-weight: 300;
+}
+
 #img-background {
     height: 100vh;
     object-fit: cover;
@@ -6,4 +11,60 @@
     top: 0;
     width: 100vw;
     z-index: -1;
+}
+
+#d-login {
+    display: none;
+    height: 100vh;
+    width: 100vw;
+}
+
+#hd-login {
+    font-size: 48px;
+    margin: 1px;
+}
+
+#f-login {
+    align-content: center;
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+
+.fc-login > input {
+    background: rgba(196, 196, 196, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    height: 6.25vh;
+    margin: 0.75vh;
+    max-height: 75px;
+    min-height: 45px;
+}
+
+#f-login > button {
+    background: rgba(68, 118, 128, 1);
+    border-radius: 40px;
+    color: whitesmoke;
+    display: block;
+    height: 7.5vh;
+    margin-top: 1.5vh;
+    min-height: 50px;
+    width: 100%;
+}
+
+.fc-login > input:hover,
+.fc-login > input:focus {
+    background: transparent;
+    border-color: rgba(174, 143, 135, 1);
+}
+
+/* common css */
+.wrap-center-vertical {
+    align-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
 }
