--- a/css/lottie/loading.css
+++ b/css/lottie/loading.css
@@ -1,4 +1,9 @@
 #lp-loading {
+    background: rgba(10, 0, 0, 0.25);
     height: 100vh;
+    position: fixed;
+    right: 0;
+    top: 0;
     width: 100vw;
+    z-index: 1;
 }
