--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -20,7 +20,7 @@ body {
 .navbar {
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+    padding: 15px;
     background: #04061c;
 }
 
@@ -29,13 +29,68 @@ body {
     left: 40%;
     top: 0;
 }
+.logo-img img{
+    width:30%;
+}
 
-.balance-value {
-    display: flex;
-    align-items: center;
+.balance-display {
+    position: relative;
+    left: 60%; 
+    top: 15px;
+}
+.balance-icon img{
+    float: left;
+    max-width: 6%;
+    max-height: 6%;
+    padding: 0.5em;
+    background: rgba(216,216,216,0.1);
+    border-radius: 50% 0 0 50%;
+}
+.balance-text {
+    float: left;
     color: white;
     text-transform: uppercase;
+    padding: 1.09em;
+    background: rgba(216,216,216,0.1);
 }
+
+.top-up-icon img {
+    padding: 0.44em;
+    background: rgba(216,216,216,0.1);
+    border-radius: 0 50% 50% 0;
+    cursor: pointer;
+}
+
+/* Summon UI */
+
+.game-background {
+    overflow: hidden;
+    position: relative;
+}
+
+.game-background img{
+    min-height: 100%;
+    min-width: 100%;
+}
+
+.btn-divider{
+    width: 200px;
+    height: auto;
+    display: inline-block;
+}
+
+.summon-container{
+    position: absolute;
+    left: 28%;
+    top: 40%;
+}
+
+.summon-container a{
+    padding: 15px 50px;
+    text-decoration: none;
+    background: yellow;
+}
+
 
 /* Hamburger Menu */
 
@@ -154,12 +209,3 @@ body {
 }
 
 /* */
-
-.game-background {
-    overflow: hidden;
-}
-
-.game-background img{
-    height: 100%;
-    width: 100%;
-}
