--- a/css/util/card.css
+++ b/css/util/card.css
@@ -114,9 +114,9 @@
 }
 
 .card-slider-img {
-    background-image: linear-gradient(147deg, #FE8A39 0%, #FD3838 74%);
+    background-image: linear-gradient(147deg, rgba(254, 138, 57,0.5) 0%, rgba(253, 56, 56, 0.5) 74%);
     border-radius: 20px;
-    box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+    box-shadow: 4px 13px 30px 1px rgba(255, 56, 56, 0.2);
     flex-shrink: 0;
     height: 300px;
     overflow: hidden;
@@ -125,7 +125,7 @@
 }
 
 .card-slider-img:after {
-    background-image: linear-gradient(147deg, #FE8A39 0%, #FD3838 74%);
+    background-image: linear-gradient(147deg, rgba(35, 31, 32, 0.1) 0%, rgba(218, 99, 99, 0.75));
     border-radius: 20px;
     content: '';
     height: 100%;
@@ -210,9 +210,9 @@
 }
 
 .card-slider-button {
-    background-image: linear-gradient(147deg, #FE8A39 0%, #FD3838 74%);
+    background-image: linear-gradient(147deg, rgba(25, 25, 25, 0.95), rgba(108, 38, 38, 0.35));
     border-radius: 50px;
-    box-shadow: 0 14px 80px rgba(252, 56, 56, 0.4);
+    box-shadow: 0 14px 25px rgba(255, 0, 0, 0.45);
     color: #FFFFFF;
     display: inline-flex;
     font-weight: 500;
@@ -282,8 +282,8 @@
 }
 
 .card-slider-pagination .swiper-pagination-bullet-active {
-    background: #FD3838;
-    box-shadow: 0 0 20px rgba(252, 56, 56, 0.3);
+    background: rgba(35, 31, 32, 0.8);
+    box-shadow: 0 0 20px rgba(255, 0, 0, 0.8);
     height: 30px;
     opacity: 1;
 }
