--- a/css/util/card.css
+++ b/css/util/card.css
@@ -114,7 +114,7 @@
 }
 
 .card-slider-img {
-    background-image: linear-gradient(147deg, rgba(254, 138, 57,0.5) 0%, rgba(253, 56, 56, 0.5) 74%);
+    background-image: linear-gradient(147deg, rgba(254, 138, 57, 0.5) 0%, rgba(253, 56, 56, 0.5) 74%);
     border-radius: 20px;
     box-shadow: 4px 13px 30px 1px rgba(255, 56, 56, 0.2);
     flex-shrink: 0;
