--- a/css/util/meteor.css
+++ b/css/util/meteor.css
@@ -1,21 +1,21 @@
 canvas#canvas-background {
-    width: 100%;
     height: 100%;
     left: 0;
-    top: 0;
-    position: fixed;
-    z-index: -1;
     opacity: 0.2;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: -1;
 }
 
 canvas#canvas-background a {
-    position: absolute;
     bottom: 2vmin;
-    right: 2vmin;
     color: rgba(255, 255, 255, 0.45);
+    position: absolute;
+    right: 2vmin;
     text-decoration: none;
 }
 
 canvas#canvas-background a:hover {
-    color: #fff;
+    color: #FFFFFF;
 }
