--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,78 @@
 body {
     background-color: #000000;
 }
+
+.form {
+    background: transparent;
+    border-radius: 0;
+    color: #FFFFFF;
+    height: 50px;
+    overflow: hidden;
+    position: relative;
+    width: 20%;
+}
+
+.form input {
+    background-color: transparent;
+    border: none;
+    color: #FFFFFF;
+    font-size: 18px;
+    height: 100%;
+    outline: none;
+    padding-top: 20px;
+    width: 100%;
+}
+
+.form label {
+    border-bottom: 1px solid white;
+    bottom: 0;
+    height: 100%;
+    left: 0;
+    pointer-events: none;
+    position: absolute;
+    width: 100%;
+}
+
+.form label::after {
+    border-bottom: 3px solid #5FA8D3;
+    bottom: -1px;
+    content: '';
+    height: 100%;
+    left: 0;
+    position: absolute;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+    width: 100%;
+}
+
+.content-name {
+    bottom: 5px;
+    left: 0;
+    position: absolute;
+    transition: all 0.3s ease;
+}
+
+.form input:focus + .label-name .content-name,
+.form input:valid + .label-name .content-name {
+    background-color: transparent;
+    color: #FFFFFF;
+    font-size: 14px;
+    transform: translateY(-150%);
+}
+
+.form input:focus .label-name::after,
+.form input:valid + .label-name:after {
+    transform: translateX(0%);
+}
+
+#ph-search {
+    align-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+    margin: 4vh 2vw;
+    position: relative;
+    right: 5vw;
+}
