--- a/css/summon.css
+++ b/css/summon.css
@@ -8,22 +8,40 @@
     z-index: 1;
     display: none;
 }
+/* Balance (Top Right) */
+.balance-display {
+  position: relative;
+  left: 80%;
+  top: 10px;
+}
+.balance-icon img{
+  float: left;
+  max-width: 51px;
+  max-height: 51px;
 
-@media screen and (min-width: 992px) {
-    #card-summon-container-section {
-        align-content: center;
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        justify-content: center;
-    }
+  padding: 0.5em;
+  background: rgba(216,216,216,0.8);
+  border-radius: 50% 0 0 50%;
+}
+.balance-text {
+  float: left;
+  color: black;
+  padding: 1em;
+  background: rgba(216,216,216,0.8);
+}
+.balance-text h2 {
+  font-size: 19px;
 }
 
-
-.btn-summon-ctn {
-    margin-top: 200px;
+.top-up-icon img {
+  max-width: 10%;
+  max-height: 10%;
+  padding: 0.1em;
+  background: rgba(216,216,216,0.8);
+  border-radius: 0 50% 50% 0;
+  cursor: pointer;
 }
+
 
 .btn-summon-ctn span{
     position: relative;
@@ -86,8 +104,9 @@
 
 .img-slider{
   position: relative;
-  width: 800px;
-  height: 500px;
+  max-width: 800px;
+  width: 100%;
+  height: 450px;
   margin: 10px;
   left: 18%;
 }
@@ -138,14 +157,15 @@
   z-index: 2;
   position: absolute;
   display: flex;
-  bottom: 10%;
+  bottom: 0;
   left: 50%;
   transform: translateX(-50%);
 }
 
 .img-slider .navigation .btn{
   background: rgba(255, 255, 255, 0.5);
-  width: 5px;
+  max-width: 5px;
+  width: 100%;
   height: 5px;
   margin: 10px;
   border-radius: 50%;
@@ -157,7 +177,33 @@
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
-@media (max-width: 820px){
+
+.summon-btns {
+  display: flex;
+  position: absolute;
+  left: 25%;
+  bottom: 10%;
+}
+
+/* Media Queries */
+
+@media screen and (max-width: 992px) {
+  #card-summon-container-section {
+    align-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+  
+  .balance-display {
+    display: none;
+  }
+  
+} 
+
+@media screen and (max-width: 992px){
   .img-slider{
     width: 600px;
     height: 375px;
@@ -183,14 +229,18 @@
   .img-slider .navigation .btn{
     width: 10px;
     height: 10px;
-    margin: 8px;
+    margin: 25px;
+  }
+  .img-slider .summon-btns{
+    position: absolute;
+    left: 15%;
   }
 }
 
-@media (max-width: 620px){
+@media screen and (max-width: 768px){
   .img-slider{
     width: 400px;
-    height: 250px;
+    height: 100%;
   }
 
   .img-slider .slide .info{
@@ -207,17 +257,30 @@
   }
 
   .img-slider .navigation{
-    bottom: 15px;
+    bottom: 50%;
   }
 
   .img-slider .navigation .btn{
-    width: 8px;
-    height: 8px;
-    margin: 6px;
+    width: 10px;
+    height: 10px;
+    margin: 15px;
+  }
+
+  .img-slider .summon-btns{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .img-slider .summon-btns .btn-summon-ctn span a {
+    font-size: 15px;
+    height: 55px;
+    width: 180px;
   }
 }
 
-@media (max-width: 420px){
+@media screen and (max-width: 480px){
   .img-slider{
     width: 320px;
     height: 200px;
@@ -240,10 +303,3 @@
     bottom: 10px;
   }
 }
-.summon-btns {
-  display: flex;
-  position: absolute;
-  left: 25%;
-  bottom: 10%;
-}
-  
