--- a/css/characterprofile.css
+++ b/css/characterprofile.css
@@ -1,7 +1,9 @@
 
 /*  import google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+*{
+  font-family: 'Poppins', sans-serif;
+}
 
 .model {
   height: 330px;
@@ -19,10 +21,9 @@ html body {
 }
 
 .stat {
-  font-family: Zen Kurenaido, sans-serif;
   max-width: 40%;
   font-size: 15px;
-  color: white;
+  color: black;
   font-weight: 300;
   padding: 1rem 2rem;
 }
@@ -34,15 +35,6 @@ html body {
   letter-spacing: 0.25ch; 
 }
 
-
-html {
-  background: radial-gradient(50vmin 50vmin, #BC4BB5, #5B21E3);
-
-  background-position: -20vw center;
-  background-repeat: no-repeat;
-  background-color: #5b21e3;
-}
-
 html, body {
   width: 100%;
   height: 100%;
@@ -50,9 +42,6 @@ html, body {
   padding: 0;
   font-size: 15px;
 }
-
-
-
 
 /* responsive media query*/    
 @media (max-width: 300px) {
