--- a/css/util/navbar.css
+++ b/css/util/navbar.css
@@ -11,6 +11,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     position: relative;
+    z-index: 2147483646;
 }
 
 .navbar-logo {
