--- a/css/profile.css
+++ b/css/profile.css
@@ -14,11 +14,11 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    height: 100vh;
+    height: 80vh;
     justify-content: center;
     position: absolute;
     right: 0;
-    top: 0;
+    top: 20vh;
     width: 100vw;
 }
 
@@ -42,7 +42,7 @@
 }
 
 .card-ctn .card {
-    background-color: rgba(255, 255, 255, .5);
+    background-color: rgba(255, 255, 255, 0.85);
     border-radius: 10px;
     box-shadow: 0 0 30px rgba(0, 0, 0, .15);
     margin: 1rem;
@@ -51,6 +51,15 @@
     padding: 2.5rem 2rem;
     position: relative;
     transform-style: preserve-3d;
+}
+
+.card-ctn .card .img {
+    align-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
 }
 
 .card-ctn .card::before,
@@ -107,7 +116,14 @@
 }
 
 .card-ctn .stats {
+    align-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
     margin-bottom: 1rem;
+    width: 100%;
 }
 
 .card-ctn .stats li {
@@ -120,6 +136,16 @@
 
 .card-ctn .stats li h4 {
     font-size: .75rem;
+}
+
+.card-ctn .links {
+    align-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    width: 100%;
 }
 
 .card-ctn .links button {
