--- a/css/signup.css
+++ b/css/signup.css
@@ -3,14 +3,14 @@ body {
     font-weight: 300;
 }
 
-#background-image {
+#img-background {
     height: 100vh;
+    left: 0;
     object-fit: cover;
-    position: fixed;
-    right: 0;
+    position: absolute;
     top: 0;
     width: 100vw;
-    z-index: -2147483648;
+    z-index: -100;
 }
 
 #d-signup {
